<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/OrangeToolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/bar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/activity_horizontal_margin"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/activity_horizontal_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/appInfo"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/versionInfo"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <!-- app info card  -->

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/opensource"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/openSource"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <!-- open source card  -->

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/translate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/translate"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <!-- translate card  -->

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <!-- contact card  -->

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
